objects/AsiaJProdSalesCoefficient__c.object
<CustomObject>
    <fields>
        <fullName>Agency__c</fullName>
        <description>0: false, 1: True, NULL: both</description>
        <label>Agency</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coefficient__c</fullName>
        <label>Coefficient</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsSVC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is SVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>Model Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Series__c</fullName>
        <label>Series</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnitPriceFrom__c</fullName>
        <label>Unit Price From</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitPriceTo__c</fullName>
        <label>Unit Price To</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Quotation J Products Sales Coefficient</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IsSVC__c</columns>
        <columns>Area__c</columns>
        <columns>Series__c</columns>
        <columns>Agency__c</columns>
        <columns>UnitPriceFrom__c</columns>
        <columns>UnitPriceTo__c</columns>
        <columns>ModelType__c</columns>
        <columns>Coefficient__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{00000000}</displayFormat>
        <label>Asia J Prod Sales Coefficient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>